--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="EUC-KR">
+<meta charset="UTF-8">
 <title>Insert title here</title>
 </head>
 <body>
-	hello world
+	<form action="test">
+		<label>안녕하세요 출력하기</label><p>
+		<input type="text" name="count" >
+		<input type="submit" value="출력">
+	</form>
 </body>
 </html>
