--- a/WebContent/add02.html
+++ b/WebContent/add02.html
@@ -5,11 +5,12 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<form action="add" method="post">
+	<form action="add02" method="post">
 		<label>계산 값을 입력 하세요</label><br>
 		<input type="number" name="num1"> 
 		<input type="number" name="num2">
-		<button type="submit">계산하기</button>
+		<input type="submit" name="op" value="+">
+		<input type="submit" name="op" value="-">
 	</form>
 </body>
 </html>
