--- a/WebContent/calc1.html
+++ b/WebContent/calc1.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<form action="calc" method="post">
+	<form action="app-calc" method="post">
 		<label>계산 값을 입력 하세요</label><br>
 		<input type="number" name="value"><p>
 		<input type="submit" name="op" value="+">
